platform-common/common-java/src/main/java/com/example/error/GlobalExceptionHandler.java
package com.example.error;

import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestControllerAdvice;
import org.springframework.web.context.request.WebRequest;

import java.time.Instant;
import java.util.Map;

@RestControllerAdvice
public class GlobalExceptionHandler {

    @ExceptionHandler(BaseException.class)
    public ResponseEntity<ApiError> handleBase(BaseException ex, WebRequest request) {
        ApiError err = new ApiError(
                ex.getCode(),
                ex.getMessage(),
                Instant.now(),
                request.getDescription(false).replace("uri=", ""),
                ex.getDetails() == null ? Map.of() : Map.of("details", ex.getDetails())
        );
        HttpStatus status = mapCodeToStatus(ex.getCode());
        return ResponseEntity.status(status).body(err);
    }

    @ExceptionHandler(Exception.class)
    public ResponseEntity<ApiError> handleOther(Exception ex, WebRequest request) {
        ApiError err = new ApiError(
                "INTERNAL_ERROR",
                "Internal server error",
                Instant.now(),
                request.getDescription(false).replace("uri=", ""),
                Map.of("exception", ex.getClass().getSimpleName())
        );
        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(err);
    }

    private HttpStatus mapCodeToStatus(String code) {
        return switch (code) {
            case "NOT_FOUND" -> HttpStatus.NOT_FOUND;
            case "BAD_REQUEST" -> HttpStatus.BAD_REQUEST;
            case "UNAUTHORIZED" -> HttpStatus.UNAUTHORIZED;
            case "FORBIDDEN" -> HttpStatus.FORBIDDEN;
            case "CONFLICT" -> HttpStatus.CONFLICT;
            default -> HttpStatus.INTERNAL_SERVER_ERROR;
        };
    }
}
